# group-chore-scheduler

./: Cargo.toml  README.md
.github/workflows/: deploy.yml
src/: lib.rs
www/: index.html  index.js  style.css
